Todo listo para el push to production

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -4,3 +4,5 @@
 
 // To customize the Active Admin interfaces, add your
 // styles here:
+
+form fieldset > ol > li.boolean label { width:80% !important; }
