--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -5,4 +5,43 @@
 // To customize the Active Admin interfaces, add your
 // styles here:
 
+a, a:link, a:visited { color:#BD1B1C; }
+form fieldset ol > li label {}
 form fieldset > ol > li.boolean label { width:80% !important; }
+
+form fieldset legend span {
+  text-transform: uppercase;
+  color: #444;
+  font-size:1.1em;
+  font-weight:100;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight:100 !important;
+  color:#606060; 
+  text-transform:uppercase;
+}
+
+#header {
+  background-color: #2c2c2c;
+  background-image: -moz-linear-gradient(top, #333333, #222222);
+  background-image: -ms-linear-gradient(top, #333333, #222222);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
+  background-image: -webkit-linear-gradient(top, #333333, #222222);
+  background-image: -o-linear-gradient(top, #333333, #222222);
+  background-image: linear-gradient(top, #333333, #222222);
+  background-repeat: repeat-x;
+
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+}
+
+#header ul#tabs > li.current > a { background:#4c4c4c; }
+#header ul#tabs > li > a:hover { background:#626262; }
+
+#title_bar h2 { font-size:2.2em; }
+
+.breadcrumb a, .breadcrumb a:link, .breadcrumb a:visited, .breadcrumb a:active { color:#666; }
+
