--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -37,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
+#header ul#tabs > li a { border-radius:5px; }
 #header ul#tabs > li.current > a { background:#4c4c4c; }
 #header ul#tabs > li > a:hover { background:#626262; }
 
