Cambio de color de los links

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -48,3 +48,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .attributes_table table th { color:#111; }
 
+a.table_tools_button { color:#838A90; }
+.table_tools_segmented_control li a { color:#444; }
+
