Columna clientes agregada a la view de Presupuestos;

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -61,3 +61,5 @@ h1, h2, h3, h4, h5, h6 {
 a.table_tools_button { color:#838A90; }
 .table_tools_segmented_control li a { color:#444; }
 
+table.index_table a { text-decoration:none; }
+
