View Presupuestos en progreso

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -64,3 +64,5 @@ a.table_tools_button { color:#838A90; }
 .table_tools_segmented_control li a { color:#444; }
 
 table.index_table a { text-decoration:none; }
+
+.sidebar_section .presupuesto.attributes_table th { width:130px; }
