--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -6,7 +6,7 @@
 // To customize the Active Admin interfaces, add your
 // styles here:
 
-a, a:link, a:visited { color:#BD1B1C; }
+.index_table a, .index_table a:link, .index_table a:visited { color:#BD1B1C; }
 form fieldset ol > li label { font-weight:normal; }
 form fieldset > ol > li.boolean label { width:80% !important; }
 
